<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/guide_layout"
    android:visibility="visible">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/welcome_frame"
        android:background="@drawable/bg_guide"
        android:visibility="visible"
        android:alpha="0.75">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            tools:layout_editor_absoluteY="149dp"
            style="@style/welcome_text"/>

        <TextView
            android:id="@+id/guide_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_text"
            tools:layout_editor_absoluteY="238dp"
            style="@style/textStyle"/>
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/spyro_logo"
            app:layout_constraintTop_toBottomOf="@id/guide_text"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/guide_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text2"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/textStyle"/>
        <TextView
            android:id="@+id/guide_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text3"
            app:layout_constraintTop_toBottomOf="@id/guide_text2"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/textStyle"/>

        <ImageView
            android:id="@+id/spyro_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="100dp"
            android:src="@drawable/spyro_flying"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guide_button"
            android:visibility="gone"/>

        <ImageButton
            android:id="@+id/guide_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="152dp"
            android:layout_marginBottom="70dp"
            android:background="@color/purple"
            android:scaleType="fitCenter"
            android:src="@drawable/red_gem"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/guide_steps"
        android:visibility="gone"
        android:alpha="0.9">
        <ImageView
            android:id="@+id/tab_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tab_selector"
            android:layout_marginStart="-75dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:alpha="0.75"/>
        <LinearLayout
            android:id="@+id/step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="350dp"
            android:background="@drawable/bg_info"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:id="@+id/text_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_char"
                style="@style/step_text"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/img_steps"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="40dp"
            android:layout_marginStart="-120dp"
            android:src="@drawable/spyro_flying"
            android:alpha="1" />
        <ImageButton
            android:id="@+id/skip_button"
            android:src="@drawable/egg"
            android:background="@color/transparent"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/step"
            android:layout_marginStart="50dp"
            android:layout_marginTop="-60dp" />
        <ImageButton
            android:id="@+id/next_button"
            android:src="@drawable/purple_gem"
            android:background="@color/transparent"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/step"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="-70dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/summary_guide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_guide"
        android:alpha="0.8"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/welcome_text"
            android:text="@string/end_guide"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_text1"
            style="@style/textStyle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed_steps"
            android:fontFamily="@font/extrabeige"
            android:textColor="@color/yellow"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_text2"
            style="@style/textStyle"/>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/end_bt"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/spyro_sit"
                android:scaleType="fitCenter"
                android:backgroundTint="@color/transparent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_guide_bt"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/extrabeige"
                android:textSize="30sp"
                android:layout_marginTop="50dp"/>
        </FrameLayout>
    </LinearLayout>
</FrameLayout>